# timeterm

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  NOTICE  README.md  archive.sh  cloc.sh  timeterm.code-workspace
api/: ZERMELO.md  example-liveschedule.json
api/reference/: Dockerfile  Makefile  Timeterm.v1.yaml  index.html  openapi.yaml
backend/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  main.go
backend/api/: api.go  device.go  ethernet.go  logr.go  message.go  model.go  model_test.go  networking.go  organization.go  student.go  user.go  zermelo.go
backend/auhtn/: authn.go  middleware.go
backend/broker/: broker.go
backend/database/: create.go  create_test.go  database.go  database_test.go  delete.go  delete_test.go  errors.go  get.go  get_test.go  janitor.go  model.go  pointer.go  replace.go  replace_test.go  walk.go
backend/docker/: postgres_init.sql
backend/jsmtest/: jsm_test.go
backend/messages/: messages.go
backend/mq/: mq.go
backend/secrets/: secrets.go
backend/templates/: error.go  error.gohtml
design/: 3D.js  NOTICE  index.html  style.css
design/js/: .gitattributes  3D.js  CCapture.js  download.js
docs/: .gitignore  Dockerfile  Makefile  config.toml
docs/assets/: _custom.scss
docs/content/: _index.md
docs/i18n/: nl.yaml
docs/nginx/: nginx.conf
frontend-admin-desktop/: .gitignore  CMakeLists.txt  DrawerButton.qml  frontend-admin-desktop_nl_NL.ts  main.cpp  main.qml  qml.qrc
frontend-admin-web/: .dockerignore  .env  .env.development  .eslintcache  Dockerfile  Makefile  README.md  package.json
frontend-admin-web/nginx/: nginx.conf
frontend-admin-web/public/: index.html  manifest.json
frontend-admin-web/src/: App.css  App.tsx  AppDrawer.tsx  ConnectPage.tsx  DevicesPage.tsx  DevicesTable.tsx  EditableCell.tsx  GeneralTable.tsx  LoginDonePage.tsx  LoginPage.tsx  SettingsPage.tsx  (+9 more)
frontend-embedded/: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  README.md  apiclient.cpp  apiclient.h  cardreader.cpp  cardreader.h  cardreadercontroller.cpp  cardreadercontroller.h  fakecardreader.cpp  fakecardreader.h  frontend-embedded_nl_NL.ts  main.cpp  main.qml  mfrc522cardreader.h  mfrc522device.cpp  mfrc522device.h  qml.qrc
frontend-embedded-devtools/: .clang-format  .gitignore  CMakeLists.txt  fakecardreaderclient.cpp  fakecardreaderclient.h  main.cpp  main.qml
frontend-embedded/dbus/: org.freedesktop.systemd1.xml
frontend-embedded/src/cpp/: main.cpp
frontend-embedded/src/cpp/api/: apiclient.cpp  apiclient.h  createdevice.cpp  createdevice.h  device.cpp  device.h  fakeapiclient.cpp  fakeapiclient.h  natscreds.cpp  natscreds.h  servicesresponse.cpp  servicesresponse.h  timetermuser.cpp  timetermuser.h  zermeloappointment.cpp  zermeloappointment.h  zermeloappointments.cpp  zermeloappointments.h
frontend-embedded/src/cpp/cardreader/: cardreader.h  cardreadercontroller.cpp  cardreadercontroller.h  fakecardreader.cpp  fakecardreader.h  mfrc522cardreader.cpp  mfrc522cardreader.h
frontend-embedded/src/cpp/devcfg/: configloader.cpp  configloader.h  configmanager.cpp  configmanager.h  connmanserviceconfig.cpp  connmanserviceconfig.h  deviceconfig.cpp  deviceconfig.h  deviceinfo.cpp  deviceinfo.h  usbmount.cpp  usbmount.h  usbmount_ttos.cpp
frontend-embedded/src/cpp/logs/: logmanager.cpp  logmanager.h  ttlogmanager.cpp  ttlogmanager.h
frontend-embedded/src/cpp/messagequeue/: binaryclient.cpp  binaryclient.h  binaryprotoclient.cpp  binaryprotoclient.h  binarystanclient.cpp  binarystanclient.h  binarystanprotoclient.cpp  binarystanprotoclient.h  enums.h  jetstreamconsumer.cpp  jetstreamconsumer.h  messagequeueclient.cpp  messagequeueclient.h  natscallbackhandlersingleton.cpp  natscallbackhandlersingleton.h  natsconnection.cpp  natsconnection.h  natsoptions.cpp  natsoptions.h  natsstatusstringer.cpp  natsstatusstringer.h  natssubscription.cpp  natssubscription.h  protoclient.cpp  protoclient.h  scopedpointer.h  stancallbackhandlersingleton.cpp  stancallbackhandlersingleton.h  stanconnection.cpp  stanconnection.h  stanconnectionoptions.cpp  stanconnectionoptions.h  stanmessage.cpp  stanmessage.h  stansuboptions.cpp  stansuboptions.h  stansubscription.cpp  stansubscription.h  strings.cpp  strings.h
frontend-embedded/src/cpp/messagequeue/messages/: decoders.cpp  decoders.h  disowntokenmessage.cpp  disowntokenmessage.h  retrievenewtokenmessage.cpp  retrievenewtokenmessage.h
frontend-embedded/src/cpp/networking/: networkmanager.cpp  networkmanager.h
frontend-embedded/src/cpp/systemd/: systemd.cpp  systemd.h
frontend-embedded/src/cpp/util/: defer.h  scopeguard.h  signalhandler.cpp  signalhandler.h  tapdetector.cpp  tapdetector.h  teardown.h  unixsignalhandler.cpp  unixsignalhandler.h
frontend-embedded/src/js/: TimeFunctions.js
frontend-embedded/src/qml/: BluetoothSetupPage.qml  ChoosableAppointmentView.qml  ChoosableAppointments.qml  DayView.qml  DayViewAppointment.qml  ErrorPopup.qml  HeaderComponent.qml  Internals.qml  Login.qml  LogsView.qml  Router.qml  TapToolTip.qml  TestdataDayView.qml  TimeLineItem.qml  WeekView.qml  WeekViewAppointment.qml  login.qml  main.qml
mfrc522/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  library.cpp  library.h
mfrc522-2/: CMakeLists.txt  gpio.cpp  main.cpp  mfrc522.cpp  mfrc522.h  spi.cpp
mfrc522/docs/: Makefile  conf.py  index.rst
mfrc522/include/mfrc522/: gpio.h  mfrc522.h  spi.h
mfrc522/src/: gpio.cpp  mfrc522.cpp  spi.cpp
nats-manager/: .env.example  .gitignore  Dockerfile  Makefile  README.md  devcfg.go  go.mod  go.sum  handler.go  jetstream.go  main.go  main_test.go  nsc.go  nsc_test.go  tx.go
os/: .gitignore  README.md  setup-environment.sh
proto/: Makefile
proto/src/: CMakeLists.txt
proto/src/timeterm_proto/: messages.proto  vault_model.proto
proto/src/timeterm_proto/devcfg/: devcfg.proto
proto/src/timeterm_proto/mq/: mq.proto
proto/src/timeterm_proto/rpc/: rpc.proto
source2pdf/: .gitignore  go.mod  main.go  main.tex.tpl  wildcard.go
(+152 files in other folders)
